# promptt

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml
demo/: Cargo.toml
demo/src/: main.rs
docs/: examples.md  getting-started.md  index.md  prompt-types.md
docs/.vitepress/: config.mts
scripts/: packageName.mjs
src/: lib.rs  prompts.rs
src/elements/: confirm.rs  mod.rs  number.rs  prompt.rs  select.rs  text.rs  toggle.rs
src/util/: action.rs  clear.rs  figures.rs  lines.rs  mod.rs  strip.rs  style.rs
