[package]
name = "promptt"
version = "0.0.1"
authors = ["YONGQI <betterhyq@qq.com>"]
edition = "2021"
description = "A template for creating a crate package"
readme = "README.md"
homepage = "https://github.com/betterhyq/promptt"
repository = "https://github.com/betterhyq/promptt.git"
license = "MIT"
keywords = [""]
categories = ["development-tools"]

[dependencies]
ansi-escapes = "0.2.0"
colour = "2.1.0"
regex = "1.10"
