[package]
name = "promptt"
version = "1.0.0"
authors = ["YONGQI <betterhyq@qq.com>"]
edition = "2021"
description = "A interactive CLI prompts library, lightweight and easy to use."
readme = "README.md"
homepage = "https://github.com/betterhyq/promptt"
repository = "https://github.com/betterhyq/promptt.git"
license = "MIT"
keywords = ["cli", "prompts", "interactive", "library"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
ansi-escapes = "0.2.0"
colour = "2.1.0"
regex = "1.10"
