[package]
name = "promptt"
version = "1.0.6"
authors = ["YONGQI <betterhyq@qq.com>"]
edition = "2024"
description = "A interactive CLI prompts library, lightweight and easy to use."
readme = "README.md"
homepage = "https://github.com/betterhyq/promptt"
repository = "https://github.com/betterhyq/promptt.git"
license = "MIT"
keywords = ["cli", "prompts", "interactive", "library"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
ansi-escapes = "0.2.0"
colour = "2.1.0"
crossterm = "0.28"
regex = "1.10"
